--- a/src/app/pages/chat/group-chat/group-chat.page.html
+++ b/src/app/pages/chat/group-chat/group-chat.page.html
@@ -11,7 +11,7 @@
       slot="start"
       name="arrow-back"
       class="fnt-18"
-      style="font-weight: bolder"
+      style="font-weight: bolder; color: #0d0439"
       button
       (click)="back()"
     >
