--- a/src/app/pages/friends-list/friends-list.page.html
+++ b/src/app/pages/friends-list/friends-list.page.html
@@ -158,8 +158,9 @@
                     >
                   </p>
                 </ion-label>
+                <!-- src="../../../assets/iconsSvg/chat-fri.svg" -->
                 <ion-icon
-                  src="../../../assets/iconsSvg/chat-fri.svg"
+                  name="chatbox-ellipses-outline"
                   (click)="rootMsgPage(frnd.id)"
                 >
                 </ion-icon>
