--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -68,7 +68,7 @@
           <ion-icon
             mode="ios"
             src="../../../assets/iconsSvg/chatbubbles.svg"
-            style="font-size: 900%; color: #3a3a3a"
+            style="font-size: 900%; color: #0d0439"
           ></ion-icon>
           <div style="margin-top: -3%">{{noChatString}}</div>
         </div>
@@ -193,7 +193,7 @@
           <ion-icon
             mode="ios"
             src="../../../assets/iconsSvg/chatbubbles.svg"
-            style="font-size: 900%; color: #3a3a3a"
+            style="font-size: 900%; color: #0d0439"
           ></ion-icon>
           <div style="margin-top: -3%">{{noChatString}}</div>
         </div>
