--- a/src/app/pages/requests/requests.page.scss
+++ b/src/app/pages/requests/requests.page.scss
@@ -67,7 +67,7 @@
 }
 
 .segment-button-checked {
-  background   : #171434;
+  background   : #0d0439;
   color        : #fff !important;
   border-radius: 5px !important;
 }
