--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,7 +88,7 @@
             routerLinkActive="active-link"
             detail="false"
           >
-            <ion-icon name="home"></ion-icon>{{ timelineString }}
+            <ion-icon name="home-outline"></ion-icon>{{ timelineString }}
           </ion-item>
 
           <ion-item
@@ -99,7 +99,7 @@
             (click)="myProfile()"
             routerLinkActive="active-link"
           >
-            <ion-icon name="person"></ion-icon>
+            <ion-icon name="person-outline"></ion-icon>
             {{ myprofileString }}
           </ion-item>
 
@@ -111,7 +111,7 @@
             routerLinkActive="active-link"
             *ngIf="regularUser === true"
           >
-            <ion-icon name="people-circle"></ion-icon>{{ teamString }}
+            <ion-icon name="people-outline"></ion-icon>{{ teamString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -121,7 +121,7 @@
             routerLinkActive="active-link"
             *ngIf="isScout !== null && isGuardian === true && isMinor === false"
           >
-            <ion-icon name="person-add"></ion-icon>{{ guardianString }}
+            <ion-icon name="person-add-outline"></ion-icon>{{ guardianString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -131,7 +131,7 @@
             routerLinkActive="active-link"
             *ngIf="isScout === true && isMinor === false"
           >
-            <ion-icon name="megaphone"></ion-icon>{{ scoutsToolString }}
+            <ion-icon name="megaphone-outline"></ion-icon>{{ scoutsToolString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -141,7 +141,7 @@
             routerLinkActive="active-link"
             *ngIf="isScout === false && isMinor === false"
           >
-            <ion-icon name="megaphone"></ion-icon>{{ scoutsToolString }}
+            <ion-icon name="megaphone-outline"></ion-icon>{{ scoutsToolString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -152,7 +152,7 @@
             detail="false"
             *ngIf="regularUser === true"
           >
-            <ion-icon name="calendar" mode="md"></ion-icon>{{ eventsString }}
+            <ion-icon name="calendar-outline" mode="md"></ion-icon>{{ eventsString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -162,7 +162,7 @@
             routerLinkActive="active-link"
             detail="false"
           >
-            <ion-icon name="call"></ion-icon>{{ helpcenterString }}
+            <ion-icon name="call-outline"></ion-icon>{{ helpcenterString }}
           </ion-item>
           <ion-item
             mode="md"
@@ -172,7 +172,7 @@
             routerLinkActive="active-link"
             detail="false"
           >
-            <ion-icon name="information-circle"></ion-icon
+            <ion-icon name="information-circle-outline"></ion-icon
             >{{ aboutTribationString }}
           </ion-item>
         </ion-list>
@@ -195,7 +195,7 @@
             float: left;
           "
           >{{ shareString }}
-          <ion-icon name="share-social"></ion-icon>
+          <ion-icon name="share-social-outline"></ion-icon>
         </ion-fab-button>
       </ion-fab>
     </ion-content>
@@ -210,7 +210,7 @@
           <ion-icon
             class="white"
             style="font-size: large; margin-left: 1.5%"
-            name="log-out"
+            name="log-out-outline"
             mode="md"
           >
           </ion-icon>
