--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -50,7 +50,7 @@ ion-avatar {
 }
 
 .topBar {
-  padding-top: 125px;
+  margin-top: 20px;
   // height: max-content;
   // max-width: 100%;
   // padding: 3%;
@@ -63,7 +63,7 @@ ion-avatar {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 40%;
+  height: 30%;
   width: 100%;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -143,7 +143,7 @@ ion-avatar {
   background: rgba(0, 0, 0, 0.55) !important;
   display: flex;
   height: 100%;
-  border-bottom: #ec5529 double 3px;
+  // border-bottom: #ec5529 double 3px;
   width: 100%;
 }
 
@@ -152,8 +152,8 @@ ion-avatar {
   width: 100%;
   align-items: center;
   margin: auto;
-  // position: absolute;
-  top: 32.5%;
+  position: absolute;
+  top: 23%;
 }
 
 .topBarMyInfo {
@@ -295,7 +295,7 @@ ion-segment-button {
   background-color: #ec5529;
 
   ion-icon {
-    margin: 0px;  
+    margin: 0px;
     clear: both;
     padding: 0px;
     color: #ffffff;
@@ -308,11 +308,17 @@ ion-segment-button {
     padding-left: 5px;
   }
 }
+.myfriendBar {
+  margin-top: 120px;
+}
 
 .unfriendBar {
   color: #0d0439;
   padding: 0px 3%;
   z-index: 999999;
+  margin-top: 120px;
+  width: 100%;
+  height: 65px;
 }
 
 .personal_Media {
