--- a/src/app/components/search-in-app/search-in-app.component.html
+++ b/src/app/components/search-in-app/search-in-app.component.html
@@ -110,9 +110,8 @@
                 </p>
               </ion-label>
               <ion-icon
-                style="font-size: x-large"
+                style="font-size: x-large; color: #ec5529"
                 name="chatbox-ellipses-outline"
-                class="black"
                 (click)="rootMsgPage(frnd.id)"
               >
               </ion-icon>
