--- a/src/global.scss
+++ b/src/global.scss
@@ -281,6 +281,7 @@ ion-range {
     .active-link-icon {
       color: #ec5529 !important;
       --color: #ec5529 !important;
+      border-bottom: 2px solid #ec5529 !important;
     }
   }
 }
